--- a/src/Activities.css
+++ b/src/Activities.css
@@ -39,14 +39,14 @@ html, body {
   width: 720px;
   height: 100%;
   background: rgba(27, 87, 126, 0.2); /* Light blue */
-  clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 98% 100%, 0% 100%);
 }
 
 .header-bar .orange {
   width: 744.67px;
   height: 100%;
   background: rgba(235, 86, 23, 0.2); /* Light orange */
-  clip-path: polygon(5% 0, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(5% 0, 100% 2%, 100% 100%, 0% 100%);
 }
 
 
