--- a/src/balloonintro.css
+++ b/src/balloonintro.css
@@ -18,20 +18,18 @@
   display: flex;
 }
 
-/* Left Blue Diagonal */
 .header-bar .blue {
-  flex: 0 0 50%; /* Equivalent to 720px of 1440px */
+  width: 720px;
   height: 100%;
   background: rgba(27, 87, 126, 0.2); /* Light blue */
-  clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 98% 100%, 0% 100%);
 }
 
-/* Right Orange Diagonal */
 .header-bar .orange {
-  flex: 0 0 50%; /* Equivalent to 720px of 1440px */
+  width: 744.67px;
   height: 100%;
   background: rgba(235, 86, 23, 0.2); /* Light orange */
-  clip-path: polygon(5% 0, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(5% 0, 100% 2%, 100% 100%, 0% 100%);
 }
 
 
