--- a/src/welcome.css
+++ b/src/welcome.css
@@ -10,7 +10,7 @@ html, body {
 }
 
 /* 2. Full Page Container */
-.welcome-page {
+.header-bar {
   position: relative;
   width: 1440px;
   height: 1024px;
@@ -18,40 +18,18 @@ html, body {
   overflow: hidden;
 }
 
-.header-bar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 1440px;
-  height: 31.44px;
-  z-index: 10;
-  display: flex;
-  overflow: hidden;
+.header-bar .blue {
+  width: 720px;
+  height: 100%;
+  background: rgba(27, 87, 126, 0.2); /* Light blue */
+  clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
 }
 
-/* Blue full-width base */
-.header-bar::before {
-  content: '';
-  position: absolute;
-  width: 100%;
+.header-bar .orange {
+  width: 744.67px;
   height: 100%;
-  background: #1B577E;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
-/* Orange overlay with subtle diagonal slash */
-.header-bar::after {
-  content: '';
-  position: absolute;
-  width: 750px;
-  height: 100%;
-  right: 0;
-  top: 0;
-  background: #EB5617;
-  clip-path: polygon(80% 0, 100% 0, 100% 100%, 0% 100%);
-  z-index: 2;
+  background: rgba(235, 86, 23, 0.2); /* Light orange */
+  clip-path: polygon(15% 0, 100% 0, 100% 100%, 0% 100%);
 }
 
 
