--- a/src/Activities.css
+++ b/src/Activities.css
@@ -153,7 +153,7 @@ html, body {
 
 /* Header columns */
 .activity-duration-header {
-  margin-right: 17px;
+  margin-left: 17px;
 }
 
 .activity-status-header {
