--- a/src/welcome.css
+++ b/src/welcome.css
@@ -26,21 +26,28 @@ html, body {
   height: 31.44px;
   z-index: 10;
   display: flex;
+  position: relative;
   overflow: hidden;
 }
 
-/* Blue bar: slants from top-right downward to left */
+/* Blue bar: subtle diagonal right to left */
 .blue-bar {
-  flex: 1;
+  position: absolute;
+  left: 0;
+  width: 720px;
+  height: 100%;
   background: #1B577E;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 5% 100%);
+  clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
 }
 
-/* Orange bar: slants from top-left downward to right */
+/* Orange bar: subtle diagonal left to right */
 .orange-bar {
+  position: absolute;
+  right: 0;
   width: 750px;
+  height: 100%;
   background: #EB5617;
-  clip-path: polygon(0 0, 95% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(5% 0, 100% 0, 100% 100%, 0% 100%);
 }
 
 
