--- a/src/welcome.css
+++ b/src/welcome.css
@@ -26,26 +26,25 @@ html, body {
   z-index: 10;
 }
 
-/* Blue bar: top-right to bottom-left (touches center) */
+/* Blue bar: top-right to bottom-left */
 .blue-bar {
   position: absolute;
   left: 0;
   width: 720px;
   height: 100%;
   background: #1B577E;
-  clip-path: polygon(0 0, 100% 0, 97.5% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 99.5% 100%, 0% 100%);
 }
 
-/* Orange bar: top-left to bottom-right (touches center) */
+/* Orange bar: top-left to bottom-right */
 .orange-bar {
   position: absolute;
   left: 720px;
   width: 720px;
   height: 100%;
   background: #EB5617;
-  clip-path: polygon(2.5% 0, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(0.5% 0, 100% 0, 100% 100%, 0% 100%);
 }
-
 
 
 /* 4. Logo */
