--- a/src/balloonintro.css
+++ b/src/balloonintro.css
@@ -19,32 +19,31 @@
   overflow: hidden;
 }
 
-/* Blue section (slightly diagonal) */
+.header-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1440px;
+  height: 31.44px;
+  z-index: 10;
+  display: flex;
+  overflow: hidden;
+}
+
 .header-bar .blue {
   width: 720px;
   height: 100%;
-  background: #1B577E;
-  clip-path: polygon(0 0, 100% 0, 103.5% 100%, 0% 100%);
+  background: rgba(27, 87, 126, 0.2); /* Light blue */
+  clip-path: polygon(0 0, 100% 0, 99.9% 100%, 0% 100%);
 }
 
-/* Orange section (slightly diagonal) */
 .header-bar .orange {
-  width: 744.67px;
+  width: 720px;
   height: 100%;
-  background: #EB5617;
-  clip-path: polygon(2.8% 0, 100% 0, 100% 100%, 0% 100%);
+  background: rgba(235, 86, 23, 0.2); /* Light orange */
+  clip-path: polygon(0.1% 0, 100% 0, 100% 100%, 0% 100%);
 }
 
-/* Logo top-left */
-.logo-image {
-  position: absolute;
-  width: 181.76px;
-  height: 160.19px;
-  left: 116.27px;
-  top: 68.99px;
-  background-repeat: no-repeat;
-  background-size: contain;
-}
 
 /* Balloon image */
 .balloon-image {
