--- a/src/Activities.css
+++ b/src/Activities.css
@@ -23,8 +23,7 @@ html, body {
   background: #FFFFFF;
 }
 
-/* === Header Bar (Subtle Light Diagonal Style) === */
-.header-bar {
+/.header-bar {
   position: absolute;
   top: 0;
   left: 0;
@@ -39,14 +38,14 @@ html, body {
   width: 720px;
   height: 100%;
   background: rgba(27, 87, 126, 0.2); /* Light blue */
-  clip-path: polygon(0 0, 100% 0, 99.4% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 99.9% 100%, 0% 100%);
 }
 
 .header-bar .orange {
-  width: 744.67px;
+  width: 720px;
   height: 100%;
   background: rgba(235, 86, 23, 0.2); /* Light orange */
-  clip-path: polygon(0.6% 0, 100% 1%, 100% 100%, 0% 100%);
+  clip-path: polygon(0.1% 0, 100% 0, 100% 100%, 0% 100%);
 }
 
 /* === Logo === */
