--- a/src/welcome.css
+++ b/src/welcome.css
@@ -26,7 +26,7 @@ html, body {
   z-index: 10;
 }
 
-/* Blue bar: from top-left to bottom-right on right edge */
+/* Blue bar: ends in a diagonal from top-right to bottom-left */
 .blue-bar {
   position: absolute;
   left: 0;
@@ -36,7 +36,7 @@ html, body {
   clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
 }
 
-/* Orange bar: from top-left to bottom-right on left edge */
+/* Orange bar: starts in a diagonal from top-left to bottom-right */
 .orange-bar {
   position: absolute;
   left: 720px;
